Added a basic HTML template and Flask functions to fill in an HTML template with data from the sample Twine story JSON

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,6 +23,8 @@
 			<p>values[{{ loop.index }}] = {{ value }}</p>
 		{% endfor %}
 
+		<p><a href="/story/{{ sample_story }}">Begin Story</a></p>
+
 	</body>
 
 </html>
