--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<title>Sample Page</title>
 
-		<link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+		<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}" />
 	</head>
 
 	<body>
