--- a/pages/story_page.html
+++ b/pages/story_page.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>{{ page['page-name'] }}</title>
 
-		<link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+		<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}" />
 	</head>
 
 	<body>
