--- a/pages/File Upload.html
+++ b/pages/File Upload.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Upload file</title>
 </head>
 <body>
 
@@ -10,7 +10,8 @@
 
 	<!-- The "file upload" button and corresponding functionality -->
 	<form>
-		<p><label>Upload file:  <input type="file"></label></p>
+		<p><label>Upload file:  <input type="file" value="Select File" multiple></label></p>
+		<input type="submit" value="Upload File">
 	</form>
 
 
