--- a/server/src/pages/home.html
+++ b/server/src/pages/home.html
@@ -13,7 +13,7 @@
 			</ul>
 		</nav>
 		<section class="header-content">
-		    <h1>Greenhouse Accelerator <br> Knowldege Hub</h1>
+		    <h1>Greenhouse Accelerator <br> Knowledge Hub</h1>
 		    <p> This resource provides personalized information on sustainable<br>
 		        business practices based upon your individual story</p>
 		    <button onclick="window.location.href='/loggedin';">Login</button>
