--- a/server/src/pages/story_page.html
+++ b/server/src/pages/story_page.html
@@ -11,7 +11,7 @@
 		<p class="storytext">{{ page['page-body-text'] | safe }}</p>
 
 		{% for child in page['page-children'] %}
-			<p class="storytext"><a href="/story/{{ story }}/{{ child }}">{{ page['page-children'][child]['link-text'] }}</a></p>
+			<p class="storytext"><a class="storylink" href="/story/{{ story }}/{{ child }}">{{ page['page-children'][child]['link-text'] }}</a></p>
 		{% endfor %}
 
 	</body>
