--- a/server/src/pages/home.html
+++ b/server/src/pages/home.html
@@ -8,7 +8,7 @@
 	<header>
 		<nav>
 		    <ul>
-		    	<li><a href="/loggedin">Login</a></li>
+		    	<li><a href="/login">Login</a></li>
 		     	<li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>		     	
 			</ul>
 		</nav>
@@ -16,7 +16,7 @@
 		    <h1>Greenhouse Accelerator <br> Knowledge Hub</h1>
 		    <p> This resource provides personalized information on sustainable<br>
 		        business practices based upon your individual story</p>
-		    <button onclick="window.location.href='/loggedin';">Login</button>
+		    <button onclick="window.location.href='/login';">Login</button>
 		    <button>Sign Up</button>
 		</section>
 	</header>
