Styled the Login Page

--- a/server/src/pages/login.html
+++ b/server/src/pages/login.html
@@ -14,13 +14,15 @@
 	<form>
 		<label for="username">Username:</label>
 		<br>
-		<input type="text" id ="username" value="Type Here">
+		<input type="text" id ="username" placeholder="Type Here">
 		<br>
 		<label for="password">Password:</label>
 		<br>
-		<input type="text" id ="password" value="Type Here">
+		<input type="password" id ="password" placeholder="Type Here">
 		<br>
 		<input type="button" value="Login" onclick="window.location.href='/loggedin';">
+		<p class="horizontaltext">or</p>
+		<input type="button" value="Signup" onclick="window.location.href='/loggedin';">
 	</form>
 	</div>
 
