--- a/server/src/pages/home.html
+++ b/server/src/pages/home.html
@@ -9,6 +9,7 @@
 		<nav>
 		    <ul>
 		    	<li><a href="/login">Login</a></li>
+		    	<li><a href="/signup">Sign Up</a></li>
 		     	<li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>		     	
 			</ul>
 		</nav>
@@ -17,7 +18,7 @@
 		    <p> This resource provides personalized information on sustainable<br>
 		        business practices based upon your individual story</p>
 		    <button onclick="window.location.href='/login';">Login</button>
-		    <button>Sign Up</button>
+		    <button onclick="window.location.href='/signup';">Sign Up</button>
 		</section>
 	</header>
 </body>
