--- a/server/src/pages/home_loggedin.html
+++ b/server/src/pages/home_loggedin.html
@@ -16,7 +16,7 @@
 			</ul>
 		</nav>
 		<section class="header-content">
-		    <h1>Welcome, Joseph</h1>
+		    <h1>Welcome, {{ first_name }}</h1>
 		    <p> Click "Begin Story" to start on your journey <br>
 		        toward sustainable practices</p>
 		    <button onclick="window.location.href='/story/{{ sample_story }}';">Begin Story</button>
