--- a/server/src/pages/signup.html
+++ b/server/src/pages/signup.html
@@ -8,17 +8,17 @@
 <body>
 	<div class="centerbox">
 	<h1>Sign Up:</h1>
-	<form>
-		<input type="text" id="firstName" placeholder="First Name">
-		<input type="text" id="lastName" placeholder="Last Name">
+	<form method="POST" action="/signup">
+		<input type="text" id="firstName" name="first-name" placeholder="First Name">
+		<input type="text" id="lastName" name="last-name" placeholder="Last Name">
 		<br>
-		<input type="text" placeholder="Email">
+		<input type="text" name="email" placeholder="Email">
 		<br>
-		<input type="password" placeholder="Password">
+		<input type="password" name="password" placeholder="Password">
 		<br>
-		<input type="password" placeholder="Confirm Password">
+		<input type="password" name="confirm-password" placeholder="Confirm Password">
 		<br>
-		<input type="button" value="Sign Up" onclick="window.location.href='/loggedin';">
+		<input type="submit" value="Sign Up">
 		<br>
 		<p class="smalltext">Already have an account?</p>
 		<a class="smalltext" href="/login">Login here.</a>
