Fixing link naming issues with GA_draft.html, GA_draft.json

--- a/server/src/story_editing/GA_draft.html
+++ b/server/src/story_editing/GA_draft.html
@@ -40,21 +40,21 @@
     <tw-passagedata pid="10" name="Shoes" tags="" position="1277,641" size="100,100"></tw-passagedata>
     <tw-passagedata pid="11" name="Health Care" tags="" position="1420,640" size="100,100"></tw-passagedata>
     <tw-passagedata pid="12" name="Startup; without its own sustainability experts" tags="" position="1399,499" size="100,100">YOUR PROFILE - our activities cover these industries:
-[[Some link text->Cleaning Products]]
-[[Some link text->Cars and Trucks]]
-[[Some link text->Shoes]]
-[[Some link text->Health Care]]
-[[Some link text->Paper]]</tw-passagedata>
+[[Cleaning Products->Cleaning Products]]
+[[Cars and Trucks->Cars and Trucks]]
+[[Shoes->Shoes]]
+[[Health Care->Health Care]]
+[[Paper->Paper]]</tw-passagedata>
     <tw-passagedata pid="13" name="Paper" tags="" position="1570,640" size="100,100"></tw-passagedata>
     <tw-passagedata pid="14" name="Cleaning Products" tags="" position="995,638" size="100,100">YOUR PROFILE - our customers are...
 [[Businesses->BtoB]]
 [[Consumers->BtoC]]</tw-passagedata>
 <tw-passagedata pid="15" name="BtoB" tags="" position="1093,799" size="100,100"></tw-passagedata>
     <tw-passagedata pid="16" name="BtoC" tags="" position="891,795" size="100,100">YOUR PROFILE - the problem in front of me concerns...
-[[Some link text->Defining Our Strategy]]
-[[Some link text->Measuring Our Impacts]]
-[[Some link text->Buying Packaging Materials]]
-[[Some link text->Manufacturing Products]]</tw-passagedata>
+[[Defining Our Strategy->Defining Our Strategy]]
+[[Measuring Our Impacts->Measuring Our Impacts]]
+[[Buying Packaging Material->Buying Packaging Materials]]
+[[Manufacturing Products->Manufacturing Products]]</tw-passagedata>
     <tw-passagedata pid="17" name="Defining Our Strategy" tags="" position="500,894" size="100,100">IN ORDER TO DEFINE YOUR STRATEGY YOU MIGHT WANT TO ASK...
 [[what is my company';s vision/purpose->Purpose]]
 [[what is my company';s mission->Mission]]
@@ -84,7 +84,7 @@ ONCE YOU HAVE ALL THE STRATEGY ELEMENTS TOGETHER...
 [[where do our users live?->User Geographies]]
 [[how else can I describe them? ->User Demographics]]</tw-passagedata>
     <tw-passagedata pid="23" name="Product Benefits" tags="" position="304,1488" size="100,100">BEYOND THE USUAL ATTRIBUTES, HERE ARE SOME THAT COVER THE PRODUCT';S SUSTAINABILIT PERFORMANCE...
-[[Some link text->TEXT DOCUMENTS]]
+[[TEXT DOCUMENTS->TEXT DOCUMENTS]]
 </tw-passagedata>
     <tw-passagedata pid="24" name="Designing the Product" tags="" position="99,1293" size="100,100">IN ORDER TO PROPERLY DESIGN YOUR PRODUCT, YOU MAY WANT TO CLARIFY ITS VALUE PROPOSITION - YOU MAY WANT TO ASK...
 [[who is the target?->Product Target]]
@@ -112,54 +112,54 @@ ONCE YOU HAVE ALL THE STRATEGY ELEMENTS TOGETHER...
 [[you may want to see some best practices->Best Practices]]
 [[you may want to understand the expectations that the various actors in your value chain have->Value Chain]]</tw-passagedata>
     <tw-passagedata pid="35" name="Software" tags="" position="797,1813" size="100,100">HERE ARE SOME PROVIDERS OF SOFTWARE WHO MIGHT BE HELPFUL TO YOU:
-[[Some link text->SAS]]
-[[Some link text->SAP]]
-[[Some link text->HARA]]
-[[Some link text->Enviance]]</tw-passagedata>
+[[SAS->SAS]]
+[[SAP->SAP]]
+[[HARA->HARA]]
+[[Enviance->Enviance]]</tw-passagedata>
     <tw-passagedata pid="36" name="Concepts" tags="" position="1487,1815" size="100,100">HERE ARE A FEW SYSTEMATIC CONCEPTS THAT COULD HELP YOU STRUCTURE, ANALYSE AND EVALUATE YOUR ISSUE?
 [[Triple Bottom Line->3BL]]
 [[Lifecycle Analysis->LCA]]
-[[Some link text->Natural Capital]]
-[[Some link text->Human/Social Capital]]
-[[Some link text->True Cost]]
-[[Some link text->SDGs]] </tw-passagedata>
+[[Natural Capital->Natural Capital]]
+[[Human/Social Capital->Human/Social Capital]]
+[[True Cost->True Cost]]
+[[SDGs->SDGs]] </tw-passagedata>
 <tw-passagedata pid="37" name="Industry Standards" tags="" position="1083,1811" size="100,100">THESE ORGANIZATIONS HAVE DEVELOPED REPORTING STANDARDS FOR THE KIND OF IMPACTS THAT YOU WANT TO MEASURE:
-[[Some link text->GRI]]
-[[Some link text->FASB]]
-[[Some link text->SASB]]
-[[Some link text->WEF]]</tw-passagedata>
+[[GRI->GRI]]
+[[FASB->FASB]]
+[[SASB->SASB]]
+[[WEF->WEF]]</tw-passagedata>
 <tw-passagedata pid="38" name="Success Stories" tags="" position="1220,1814" size="100,100"></tw-passagedata>
 <tw-passagedata pid="39" name="Best Practices" tags="" position="1359,1812" size="100,100"></tw-passagedata>
 <tw-passagedata pid="40" name="Value Chain" tags="" position="939,1811" size="100,100"></tw-passagedata>
 <tw-passagedata pid="41" name="GRI" tags="" position="1094,2027" size="100,100">MORE ON GRI IS HERE:
-[[Some link text->VIDEO CLIPS]]
-[[Some link text->TEXT DOCUMENTS]]
-[[Some link text->LINKS TO WEBSITES]] </tw-passagedata>
+[[VIDEO CLIPS->VIDEO CLIPS]]
+[[TEXT DOCUMENTS->TEXT DOCUMENTS]]
+[[LINKS TO WEBSITES->LINKS TO WEBSITES]] </tw-passagedata>
 <tw-passagedata pid="42" name="FASB" tags="" position="1220,2031" size="100,100"></tw-passagedata>
 <tw-passagedata pid="43" name="SASB" tags="" position="1341,2032" size="100,100"></tw-passagedata>
 <tw-passagedata pid="44" name="WEF" tags="" position="1459,2032" size="100,100"></tw-passagedata>
 <tw-passagedata pid="45" name="User Geographies" tags="" position="71,1688" size="100,100">THE GEOGRAPHIC LOCATION OF YOUR CUSTOMERS HAS IMPLICATIONS FOR THE SUSTAINABILITY OF YOUR OFFEREINGS...
-[[Some link text->TEXT DOCUMENTS]]
-[[Some link text->LINKS TO WEBSITES]]</tw-passagedata>
+[[TEXT DOCUMENTS->TEXT DOCUMENTS]]
+[[LINKS TO WEBSITES->LINKS TO WEBSITES]]</tw-passagedata>
 <tw-passagedata pid="46" name="User Demographics" tags="" position="200,1689" size="100,100">HERE ARE SOME QUESTIONS AROUND USER DEMOGRAPHICS THAT ADDRESS SUSTAINABILITY CONSIDERATIONS?
-[[Some link text->TEXT DOCUMENTS]]
-[[Some link text->LINKS TO WEBSITES]]</tw-passagedata>
+[[TEXT DOCUMENTS->TEXT DOCUMENTS]]
+[[LINKS TO WEBSITES->LINKS TO WEBSITES]]</tw-passagedata>
 <tw-passagedata pid="47" name="SAS" tags="" position="580,2195" size="100,100"></tw-passagedata>
 <tw-passagedata pid="48" name="SAP" tags="" position="703,2195" size="100,100"></tw-passagedata>
 <tw-passagedata pid="49" name="HARA" tags="" position="825,2196" size="100,100">HOW CAN I FIND OUT MORE ABOUT THE COMPANY AND ITS PRODUCTS?
-[[Some link text->TEXT DOCUMENTS]]
-[[Some link text->LINKS TO WEBSITES]]
-[[Some link text->AUDIO INTERVIEWS]] </tw-passagedata>
+[[TEXT DOCUMENTS->TEXT DOCUMENTS]]
+[[LINKS TO WEBSITES->LINKS TO WEBSITES]]
+[[AUDIO INTERVIEWS->AUDIO INTERVIEWS]] </tw-passagedata>
 <tw-passagedata pid="50" name="Enviance" tags="" position="940,2190" size="100,100"></tw-passagedata>
 <tw-passagedata pid="51" name="3BL" tags="" position="1853,2284" size="100,100"></tw-passagedata>
 <tw-passagedata pid="52" name="LCA" tags="" position="1982,2283" size="100,100"></tw-passagedata>
 <tw-passagedata pid="53" name="Natural Capital" tags="" position="2126,2282" size="100,100">MUCH WORK HAS BEEN CARRIED OUT TO DEFINE AND QUANTIFY THE VALUE OF NATURAL CAPITAL - HERE ARE A FEW EXAMPLES:
-[[Some link text->VIDEO CLIPS]]
-[[Some link text->AUDIO INTERVIEWS]]
-[[Some link text->TEXT DOCUMENTS]]
-[[Some link text->GRAPHIC DESCRIPTIONS]]
-[[Some link text->LINKS TO WEBSITES]]
-[[Some link text->PICTURES]]</tw-passagedata>
+[[VIDEO CLIPS->VIDEO CLIPS]]
+[[AUDIO INTERVIEWS->AUDIO INTERVIEWS]]
+[[TEXT DOCUMENTS->TEXT DOCUMENTS]]
+[[GRAPHIC DESCRIPTIONS->GRAPHIC DESCRIPTIONS]]
+[[LINKS TO WEBSITES->LINKS TO WEBSITES]]
+[[PICTURES->PICTURES]]</tw-passagedata>
 <tw-passagedata pid="54" name="Human/Social Capital" tags="" position="2260,2287" size="100,100"></tw-passagedata>
 <tw-passagedata pid="55" name="True Cost" tags="" position="2394,2287" size="100,100"></tw-passagedata>
 <tw-passagedata pid="56" name="SDGs" tags="" position="1715,2284" size="100,100"></tw-passagedata>
