--- a/server/src/pages/login.html
+++ b/server/src/pages/login.html
@@ -9,7 +9,7 @@
 	<div class="centerbox">
 		<h1>Login:</h1>
 	<form method="POST" action="/login">
-		<input type="text" name="email" placeholder="Email">
+		<input type="email" name="email" placeholder="Email">
 		<br>
 		<input type="password" name="password" placeholder="Password">
 		<br>
