--- a/server/src/pages/history.html
+++ b/server/src/pages/history.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <head>
     <title> History Test Page </title>
-	<link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="javascript/history.js" defer></script>
+	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
+	<script type="text/javascript" src="{{url_for('static', filename='scripts/history.js'"" defer></script>
 </head>
 
 <body>
@@ -23,25 +23,18 @@
 		    <p> View stories you have previously visited here </p>
 		    <button onclick="window.location.href='/profile';">Return to Profile</button>
 		</section>
-        <div>
-			<!-- Can use jinja to set the variables -->
-			<button class="collapsible"> 1. Last Entry </button>
-			<div id="content">
-				<a href=""><p>Prior Entry</p></a>
-				<a href=""><p>Entry Before Prior</p></a>
-			</div>
 
-			<button class="collapsible"> 2. Last Entry </button>
-			<div id="content">
-				<a href=""><p>Prior Entry</p></a>
-				<a href=""><p>Entry Before Prior</p></a>
-			</div>
-
-			<button class="collapsible"> 3. Last Entry </button>
-			<div id="content">
-				<a href=""><p>Prior Entry</p></a>
-				<a href=""><p>Entry Before Prior</p></a>
-			</div>
+		<div>
+			<!-- Dictionary Variable -->
+			{% for element in history %}
+				<button class="collapsible">{{ element[0][0] }}</button>
+				<ul>
+				{% for elem in element %}
+					<li><a href="/story/data/{{elem[1]}}">elem[0]</a></li>
+				{% endfor %}
+				</ul>
+			{% endfor %}
 		</div>
 	</header>
 </body>
+</html>
