--- a/server/src/pages/history.html
+++ b/server/src/pages/history.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <head>
     <title> History Test Page </title>
-	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
-	<script type="text/javascript" src="{{url_for('static', filename='scripts/history.js'"" defer></script>
+	<link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
+	<script type="text/javascript" src="{{ url_for('static', filename='scripts/history.js') }}" defer></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 				<button class="collapsible">{{ element[0][0] }}</button>
 				<ul>
 				{% for elem in element %}
-					<li><a href="/story/data/{{elem[1]}}">elem[0]</a></li>
+					<li><a href="/story/data/{{ elem[1] }}">{{ elem[0] }}</a></li>
 				{% endfor %}
 				</ul>
 			{% endfor %}
