commenting in Editor.py and some work on edit functions, First effort to get local Firebase emulators working

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -15,7 +15,7 @@
 				  this.responseText;
 				}
 		    }
-    		xhttp.open("GET", "/admin/dice", true);
+    		xhttp.open("GET", "/editor/dice", true);
     		xhttp.send(int1 + int2);
 		}
 	</script>
