Created functionality for favorites page

--- a/server/src/pages/favorites.html
+++ b/server/src/pages/favorites.html
@@ -18,13 +18,16 @@
 		<section class="header-content">
 		    <h1>Hello, {{ first_name }}</h1>
 		    <p> View and edit your profile here </p>
-		    <button onclick="window.location.href='/profile/edit';">Edit Profile</button>
-		    <button onclick="window.location.href='/favorites';">Favorites</button>
-		    <button onclick="window.location.href='/history';">History</button>
-		    
-		    <!-- Need to add functionality to the story buttons -->
-		    <button onclick="window.location.href='#';">Resume Story</button>
-		    <button onclick="window.location.href='#';">New Story</button>
+		    <button onclick="window.location.href='/profile';">Return to Profile</button>
 		</section>
+
+		<div>
+			<!-- Dictionary variable -->
+			{% for element in favorites %}
+			<div class="content">
+			<a href="/story/data/{{ element[1] }}"><p>{{ element[0] }}</p></a>
+			</div>
+			{% endfor %}
+		</div>
 	</header>
 </body>
