--- a/server/src/pages/home_loggedin.html
+++ b/server/src/pages/home_loggedin.html
@@ -9,8 +9,7 @@
 		<nav>
 		    <ul>
 		    	<li><a href="/">Logout</a></li>
-		    	<li><a href="#">Profile</a></li>
-		    	<li><a href="#">Library</a></li>
+		    	<li><a href="/profile">Profile</a></li>
 		    	<li><a href="/upload">File Upload</a></li>
 		    	<li><a href="/editor">Editor</a></li>
 		     	<li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>	     	
