Changed logged in homepage to the same page as the original homepage

--- a/server/src/pages/history.html
+++ b/server/src/pages/history.html
@@ -10,8 +10,8 @@
 	<header>
 		<nav>
 		    <ul>
-		    	<li><a href="/">Logout</a></li>
-		    	<li><a href="/loggedin">Home</a></li>
+		    	<li><a href="/logout">Logout</a></li>
+		    	<li><a href="/">Home</a></li>
 		    	<li><a href="/profile">Profile</a></li>
 		    	<li><a href="/upload">File Upload</a></li>
 		     	<li><a href="https://www.greenhouseatl.org/" title="www.greenhouseatl.org" target="_blank"> Greenhouse Accelerator </a></li>	     	
