--- a/server/src/pages/home_loggedin.html
+++ b/server/src/pages/home_loggedin.html
@@ -8,7 +8,7 @@
 	<header>
 		<nav>
 		    <ul>
-		    	<li><a href="/">Logout</a></li>
+		    	<li><a href="/logout">Logout</a></li>
 		    	<li><a href="/profile">Profile</a></li>
 		    	<li><a href="/upload">File Upload</a></li>
 		    	<li><a href="/editor">Editor</a></li>
