--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -2,6 +2,10 @@
 <head>
 <!-- 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}"> -->
 	<link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}">
+	<script src="{{url_for('static', filename='vendor/jquery/jquery-3.6.0.min.js')}}" defer></script>
+	<script src="{{url_for('static', filename='scripts/editor/Editor.js')}}" defer></script>
+	<script src="{{url_for('static', filename='scripts/editor/editor_controller.js')}}" defer></script>
+
 	<script>
 		function calledOnClick(id) {
 			var rand = Math.floor((Math.random() * 12) + 1);
@@ -30,11 +34,12 @@
 <body>
 	<div class="parent2">
 		<div class="div5" id="storage">
-			<button id="s01" class="storybox" onclick="calledOnClick(this.id)">Story 1</button>
+			<button id="2000" class="storybox">Story 1</button>
+			<!-- <button id="2000" class="storybox">Story 1</button>
 			<button id="s02" class="storybox" onclick="calledOnClick(this.id)">Story 2</button>
 			<button id="s03" class="storybox" onclick="calledOnClick(this.id)">Story 3</button>
 			<button id="s04" class="storybox" onclick="calledOnClick(this.id)">Story 4</button>
-			<button id="s+" class="storybox" onclick="calledOnClick(this.id)">+</button>
+			<button id="s+" class="storybox" onclick="calledOnClick(this.id)">+</button> -->
 		</div>
 		<div class="div6" id="other-storage"> 
 			<p id="metadata">*THIS IS METADATA*</p>
