Added functionality to reset password

--- a/server/src/pages/login.html
+++ b/server/src/pages/login.html
@@ -17,6 +17,9 @@
 		<br>
 		<p class="smalltext">Don't have an account?</p>
 		<a class="smalltext" href="/signup">Sign up here.</a>
+		<br>
+		<p class="smalltext">Forgot your password?</p>
+		<a class="smalltext" href="/forgot_password">Reset it here.</a>
 	</form>
 	</div>
 
