More editor controller

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -34,7 +34,8 @@
 <body>
 	<div class="parent2">
 		<div class="div5" id="storage">
-			<button id="2000" class="storybox">Story 1</button>
+			<!-- <button id="2000" class="storybox">Story 1</button> -->
+			<button id="+" class="add_storybox">+</button>
 			<!-- <button id="2000" class="storybox">Story 1</button>
 			<button id="s02" class="storybox" onclick="calledOnClick(this.id)">Story 2</button>
 			<button id="s03" class="storybox" onclick="calledOnClick(this.id)">Story 3</button>
@@ -60,5 +61,10 @@
 			<button style="background: #838DD8; border-color: #838DD8;">save</button> <br>	
 			<button style="background: #D88D83; border-color: #D88D83;">discard</button> <br>	
 		</div>
+	</div>
+
+
+	<div class="popup" id="popup-box">
+		<h1> Select a Story to Open</h1> 
 	</div>
 </body>
