Added page body text display

--- a/server/src/pages/openeditor.html
+++ b/server/src/pages/openeditor.html
@@ -53,16 +53,24 @@
 			<p> Story names can only contain letters, numbers, underscores, and hyphens</p>
 
 		</div>
-		<div class="div7" id="page-list">
-			<h1>Page List</h1>
-		</div>
-		<div class="div8"> 
-			<button>edit</button> <br>
-			<button>add subtree</button> <br>
-			<button>add new child</button> <br>
-			<button>add link</button> <br>
-			<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button> <br>	
-			<button style="background: #D88D83; border-color: #D88D83;">discard</button> <br>	
+
+		<div style="display: flex; width=100%;">
+			<div class="div7" id="page-list" style="width: 25%">
+				<h1>Page List</h1>
+			</div>
+			
+			<div id="page-pane" style="width: 1000px">
+				<p id="page-pane-child">This is text</p>
+			</div>
+
+			<div class="div8" style="width: 15%"> 
+				<button>edit</button> <br>
+				<button>add subtree</button> <br>
+				<button>add new child</button> <br>
+				<button>add link</button> <br>
+				<button id="save_story" style="background: #838DD8; border-color: #838DD8;">save</button> <br>	
+				<button style="background: #D88D83; border-color: #D88D83;">discard</button> <br>	
+			</div>
 		</div>
 	</div>
 
