Reset password now sends an email so the user can use a temporary password to reset their password

--- a/server/src/pages/forgot_password.html
+++ b/server/src/pages/forgot_password.html
@@ -9,7 +9,7 @@
 	<div class="centerbox">
 		<h1>Forgot Password:</h1>
 	<form method="POST" action="/forgot_password">
-		<input type="email" name="email" placeholder="Email">
+		<input type="email" name="email" placeholder="Email" autocomplete="email">
 		<br>
 		<input type="submit" value="Submit">
 		<br>
