--- a/server/src/pages/login.html
+++ b/server/src/pages/login.html
@@ -9,9 +9,9 @@
 	<div class="centerbox">
 		<h1>Login:</h1>
 	<form method="POST" action="/login">
-		<input type="email" name="email" placeholder="Email">
+		<input type="email" name="email" placeholder="Email" autocomplete="email">
 		<br>
-		<input type="password" name="password" placeholder="Password">
+		<input type="password" name="password" placeholder="Password" autocomplete="current-password">
 		<br>
 		<input type="submit" value="Login">
 		<br>
