--- a/server/src/pages/reset_password_2.html
+++ b/server/src/pages/reset_password_2.html
@@ -11,9 +11,9 @@
 	<form method="POST" action="/reset_password">
 		<p class="smalltext"></p>
 		<input type="text" name="email" style="display:none;" value="{{ email }}">
-		<input type="password" name="password" placeholder="Password">
+		<input type="password" name="password" placeholder="Password" autocomplete="new-password">
 		<br>
-		<input type="password" name="confirm-password" placeholder="Confirm Password">
+		<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password">
 		<br>
 		<input type="submit" value="Reset">
 	</form>
