--- a/server/src/pages/reset_password_1.html
+++ b/server/src/pages/reset_password_1.html
@@ -11,7 +11,7 @@
 	<form method="POST" action="/reset_password">
 		<p class="smalltext">A temporary password was sent to your email.</p>
 		<input type="text" name="email" style="display:none;" value="{{ email }}">
-		<input type="password" name="password" placeholder="Temporary Password">
+		<input type="password" name="password" placeholder="Temporary Password" autocomplete="one-time-code">
 		<br>
 		<input type="submit" value="Submit">
 	</form>
