--- a/server/src/pages/signup.html
+++ b/server/src/pages/signup.html
@@ -9,14 +9,14 @@
 	<div class="centerbox">
 	<h1>Sign Up:</h1>
 	<form method="POST" action="/signup">
-		<input type="text" id="firstName" name="first-name" placeholder="First Name">
-		<input type="text" id="lastName" name="last-name" placeholder="Last Name">
+		<input type="text" id="firstName" name="first-name" placeholder="First Name" autocomplete="given-name">
+		<input type="text" id="lastName" name="last-name" placeholder="Last Name" autocomplete="family-name">
 		<br>
-		<input type="text" name="email" placeholder="Email">
+		<input type="text" name="email" placeholder="Email" autocomplete="email" autocomplete="email">
 		<br>
-		<input type="password" name="password" placeholder="Password">
+		<input type="password" name="password" placeholder="Password" autocomplete="new-password">
 		<br>
-		<input type="password" name="confirm-password" placeholder="Confirm Password">
+		<input type="password" name="confirm-password" placeholder="Confirm Password" autocomplete="new-password">
 		<br>
 		<input type="submit" value="Sign Up">
 		<br>
